[workspace]
members = [ "storechain", "x/store" ]
resolver = "2"

[workspace.dependencies]
auth = { git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9" }
bank = { git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9" }
database = { git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9" }
gears = { git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9" }
proto-messages = { git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9" }
proto-types = { git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9" }
store = { git = "https://github.com/rumos-io/gears", rev = "9019b276e71c34a7be49859eff84fac1555ed9a9" }
ibc-proto = { git = "https://github.com/joneskm/ibc-proto-rs" }

st = { version = "*", path = "./x/store/" }
sqlx = { version = "~0.7.2", features = [ "runtime-async-std" ] }
