[package]
name = "st"
version = "0.1.0"
edition = "2021"

[dependencies]
gears = { workspace = true }
store = { workspace = true }
database = { workspace = true }
proto-types = { workspace = true }
proto-messages = { workspace = true }
ibc-proto = { workspace = true }

anyhow = "~1.0"
axum = "~0.6"
bytes = "1.2.1"
clap = { version = "~4.2", features = [ "derive" ] }
serde = { version = "~1.0", default-features = false }
serde_json = "~1.0"
prost = { version = "0.11" }
tendermint-abci = { git = "https://github.com/joneskm/tendermint-rs" }
tendermint-informal = { package = "tendermint", git = "https://github.com/joneskm/tendermint-rs" }
tendermint-proto = { git = "https://github.com/joneskm/tendermint-rs" }
tendermint-rpc = { git = "https://github.com/joneskm/tendermint-rs", features = [
    "http-client",
] }
tracing = { version = "~0.1", default-features = false }
hex = "~0.4"

[dev-dependencies]
